# databricks-mcp

./: .gitignore  .mcp_example.json  Dockerfile  README.md  claude_desktop_config_example.json  databricks_connections_example.json  docker-compose.yml  pyproject.toml  register-mcp-claude-code.sh
src/databricks_mcp/: __init__.py  server.py
